# convex_hull

./: CMakeLists.txt  DivideAndConquer.cpp  DivideAndConquer.h  DivideAndConquerWithVis.cpp  Giftwrapping.cpp  Giftwrapping.h  Makefile  README.md  Timing.cpp  VisDivideAndConquer.cpp  VisDivideAndConquer.h  divide_conquer.cpp  divide_conquer.h  generate.py  main.cpp  main2.cpp  main4gwvistest.cpp  main_2.cpp  maincpp.cpp  points.txt  protokoll.md
Testfiles/Circle/: 100000.txt  150000.txt  200000.txt  250000.txt  50000.txt
Testfiles/Random/: 10.txt  1000.txt  10000.txt  100000.txt  150000.txt  2000.txt  20000.txt  200000.txt  2500.txt  250000.txt  3000.txt  5000.txt  50000.txt
Testfiles/Rectangle/: 100000.txt  150000.txt  200000.txt  250000.txt  50000.txt
